--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -6,6 +6,8 @@
 <script src="${staticDomain}/family/scripts/family-common.js"></script>
 <script>
 $(function(){
+     $('.nav a:eq(0)').addClass('active');
+     
 	//页面初始化 
 	$("form input[type=text],input[type=password]").each(function () {
         var _this = $(this);
