--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_passwd.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_passwd.vm
@@ -5,7 +5,8 @@
 <script type="text/javascript" src="${staticDomain}/family/scripts/family-common.js"></script>
 <script >
 $(function(){
-
+	$('.nav a:eq(0)').addClass('active');
+	
 	// 检验密码1
 	var checkPwd1 = function(obj, type){
 		var errorMsg = '';
