--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_index.vm
@@ -4,6 +4,7 @@
 <script>!window.jQuery && document.write(unescape('%3Cscript src="js/minified/jquery-1.9.1.min.js"%3E%3C/script%3E'))</script>  <!--scroll美化-->
 <script type="text/javascript">
 $(function(){
+	$('.nav a:eq(0)').addClass('active');
 	// 用户注册协议
 	$("#uftRegistered").click(function(){
        $(".bgBox , #uft").fadeIn();       
