--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -174,6 +174,9 @@
 	                              #end
                               </td>
                           </tr>
+						  #end
+						  #if(${pay.planList.size()} == 0)
+						  <tr><td colspan="7">没有记录！</td></tr>
 						  #end		  
                       </table>
                   </div>
