--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -87,7 +87,7 @@
                   	  <strong class="num-red" style="font-size: 45px;">${totalplanmonthamt}</strong>
                       <a href="javascript:;" class="btn btn-red btn-pay">缴费</a>
                   </p>
-                  <p><a href="${ufbDomain}/family/uft/pay_records.htm" class="hoverLine" style="margin-left:4px;">历史明细</a></p>
+                  <p><a href="${ufbDomain}/family/uft/record_index.htm" class="hoverLine" style="margin-left:4px;">历史明细</a></p>
             </div>
             <div class="myright fl">
                 <div class="myright-top">
