--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/record_unit.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/record_unit.vm
@@ -1,5 +1,5 @@
 #foreach($d in ${detailList})
-<div class="item">
+<div class="item" detailid="${d.detailid}">
     <div class="fix-content">
         <ul>
             <li class="width2">
