--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/slider_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/slider_family.vm
@@ -8,6 +8,6 @@
 	<div class="a2">
 		<a href="javascript:;" class="b1" onclick="$.scrollTo(0,400);"></a>
 		<a href="javascript:;" class="b2"><div><b></b></div></a>
-		<a href="${ufbDomain}/family/help/aboutuft.htm" class="b3">帮助<br>中心</a>
+		<a href="${ufbDomain}/family/help/about.htm" class="b3">帮助<br>中心</a>
 	</div>
 </div>
